@@ -15,7 +15,7 @@
 #      along with this program; if not, write to the Free Software
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 #   
-# $Id: protocol.py,v 1.8 2002/02/14 06:13:14 smulloni Exp $
+# $Id: protocol.py,v 1.9 2002/02/24 15:50:21 smulloni Exp $
 # Time-stamp: <01/05/04 15:57:35 smulloni>
 ########################################################################
 
@@ -118,6 +118,7 @@ class HTTPConnection:
         for i in args:
             d[i]=self.args.get(i)
         for k, v in kwargs.items():
+            #default=None
             if callable(v):
                 converter=v
                 default=None
@@ -131,6 +132,9 @@ class HTTPConnection:
                     default=v[1]
                 else:
                     default=None
+            else:
+                default=None
+                converter=None
             val=self.args.get(k, default)
             if val != default and converter != None:
                 try:
@@ -372,6 +376,9 @@ def _cleanupConfig(requestData, sessionDict):
 
 ########################################################################
 # $Log: protocol.py,v $
+# Revision 1.9  2002/02/24 15:50:21  smulloni
+# adding product wizard
+#
 # Revision 1.8  2002/02/14 06:13:14  smulloni
 # slight tweak -- don't apply converters to default values in extract_args
 #
